--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@techassi/vue-youtube-iframe": "^1.0.6",
+    "lodash": "^4.17.21",
     "video.js": "^7.17.0",
     "videojs-youtube": "^2.6.1",
     "vue": "^3.2.25",
